--- a/src/components/register/register.css
+++ b/src/components/register/register.css
@@ -1,4 +1,4 @@
-/* .welcome-container {
+.welcome-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -178,4 +178,4 @@
   .corner-accent.bottom-right {
     bottom: 1rem;
     right: 1rem;
-  } */
+  }
